# HCR

./: Cargo.toml  README.md  package-lock.json
haircut_core/: Cargo.toml  index.html
haircut_core/src/: clipper.rs  commands.rs  config.rs  debris.rs  geometry.rs  hair.rs  init.rs  lib.rs  math.rs  physics.rs  physics.wgsl  simulation.rs  tests.rs
haircut_web/: Cargo.toml
haircut_web/fixtures/: 1_happy_path.jsonl  2_skin_violation.jsonl  3_ambiguous_command.jsonl  4_out_of_order.jsonl  5_sensor_impairment.jsonl
haircut_web/src/: main.rs  render_svg.rs  script.rs  tests.rs  ticker.rs
haircut_web/templates/: scene.html
hotaru_mqtt/: Cargo.toml
hotaru_mqtt/src/: lib.rs
