[package]
name = "haircut_core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wgpu = "30.0.0" 
wasm-bindgen-futures = "0.4"
futures-channel = "0.3.32"
web-sys = { version = "0.3", features = ["console"] }

[lib]
crate-type = ["cdylib", "rlib"]